Fix spacing on Top Bar
The margins on the top selector bar were off, and the bar was not filling the entire top of the screen. That should be fixed now.

--- a/css/style2.css
+++ b/css/style2.css
@@ -24,6 +24,9 @@ body {
   top: 0;
   width: 100%;
   position: fixed;
+  margin: 0;
+  padding: 0;
+  left: 0;
 }
 
 ul {
